--- a/UpcomingEvents.html
+++ b/UpcomingEvents.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UpcomingEvents</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style.css">
-    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png"
+        type="image/x-icon">
 </head>
 
 <body>
@@ -49,12 +50,12 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_3.jpg"
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_1.jpg"
                         class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="teatro">
 
                 </div>
                 <div class="carousel-item">
-                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_4.jpg"
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg"
                         class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="cine">
                 </div>
                 <div class="carousel-item">
@@ -95,7 +96,7 @@
                     </li>
                     <li class="nav-item">
                         <label class="nav-link ">
-                            <input type="checkbox" name="food" value="sports"> Food
+                            <input type="checkbox" name="food" value="food"> Food
                         </label>
                     </li>
                     <li class="nav-item">
@@ -119,79 +120,29 @@
         </div>
     </nav>
 
-
-    <section class="m-4 d-flex flex-wrap justify-content-center gap-3">
-        <div class="card" style="width: 18rem;">
-            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/books.jpg" class="card-img-top"
-                alt="books">
-            <div class="card-body">
-                <h5 class="card-title"> Upcoming Books</h5>
-                <p class="card-text">Enjoy an afternoon of reading with many fun books to learn a lot easy lot.</p>
-                <div class="precio">
-                    <p>12$</p>
-                    <a href="./Details.html" class="btn btn-primary ">Details</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/food_fair.jpg"
-                class="card-img-top" alt="food">
-            <div class="card-body">
-                <h5 class="card-title"> Upcoming Food</h5>
-                <p class="card-text">enjoy all the special recipes prepared for you and your family easy</p>
-                <div class="precio">
-                    <p>12$</p>
-                    <a href="./Details.html" class="btn btn-primary ">Details</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/costume_party.jpg"
-                class="card-img-top" alt="Party">
-            <div class="card-body">
-                <h5 class="card-title">Upcoming Party</h5>
-                <p class="card-text">Take advantage of the recreational spaces that have been prepared for you.</p>
-                <div class="precio">
-                    <p>12$</p>
-                    <a href="./Details.html" class="btn btn-primary ">Details</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/cinema.jpg" class="card-img-top"
-                alt="cine">
-            <div class="card-body">
-                <h5 class="card-title">Upcoming Cinema</h5>
-                <p class="card-text">More than 20 movies in theaters to keep you entertained for many hours</p>
-                <div class="precio">
-                    <p>12$</p>
-                    <a href="./Details.html" class="btn btn-primary ">Details</a>
-                </div>
-            </div>
-        </div>
-
+    <section id="contenedorTarjetas" class="m-4 d-flex flex-wrap justify-content-center gap-3">
     </section>
-
 
     <footer class="footer">
         <div>
             <a href="https://wa.me/+573213006662"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp" height="40"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp"
+                    height="40"></a>
             <a href="https://www.facebook.com/Manuel.cerquera/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook" height="40"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook"
+                    height="40"></a>
             <a href="https://www.instagram.com/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram" height="40"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram"
+                    height="40"></a>
         </div>
 
         <h6>©2024 Manuel cerquera</h6>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="./upcomingEvents.js"></script>
 </body>
 
 </html>
